# kami

./: pubspec.yaml
.github/workflows/: Releases.yml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: commons.dart  cross.dart  main.dart
lib/configs/: cache_time.dart  configs.dart  login.dart  proxy.dart  reader_controller_type.dart  reader_direction.dart  reader_type.dart  versions.dart
lib/screens/: about_screen.dart  collected_comics_account_screen.dart  comic_download_screen.dart  comic_info_screen.dart  comic_reader_screen.dart  comic_search_screen.dart  discovery_screen.dart  download_comic_info_screen.dart  downloads_screen.dart  histories_screen.dart  init_screen.dart  login_screen.dart  rank_screen.dart  recommends_screen.dart  user_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: api.rs  global.rs  mod.rs
rust/src/commons/: define.rs  downloading.rs  exports.rs  mod.rs  udto.rs  utils.rs
rust/src/database/: mod.rs
rust/src/database/active/: comic_view_log.rs  local_collect.rs
rust/src/database/cache/: image_cache.rs  web_cache.rs
rust/src/database/download/: download_comic.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_kami.podspec
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+23 files in other folders)
